2006-04-15  Stefan Jahn  <stefan@lkcc.org>

	* qucs_it.ts: Applied Italian translation updates.

	* qucs_ru.ts: Added Russian translations.  Thanks to Igor.

2006-04-15  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* mark current line in text editor
	* new action: insert sceleton of VHDL entity
	* bugfix: take care of deactivated components in subcircuits
	* new component: VHDL file
	* match text position after change of component symbol
	* component name can be shown or not on schematic
	* catch if user adds an equation line with already existing name

2006-04-08  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* compiling with "no-exceptions" reduces binary by a third
	* syntax highlighting for text document

2006-04-01  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed segfault during simulations with subcircuits
	* show cursor position of text documents
	* set "gnd <= '0';"
	* switch symbol closed if initial value is on
	* time list of switch with"[...]"
	* new symbol for "inout" subcircuit port
	* zoom for VHDL editor
	* fixed VHDL output for multi-port nor/nand
	* correct old xnor symbol
	* new action: search string in text document
	* "edit circuit symbol" is now on F9 key
	* don't paint lineedit on schematic over scrollbar

2006-03-22  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* extensive restructuring of Qucs
	* started to implement a VHDL text editor

2006-02-28  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* press CTRL key during component moving to use no grid
	* "Temp" property for tline, relais and switch
	* reworked the generation of VHDL code

2006-02-28  Stefan Jahn  <stefan@lkcc.org>

	* diagrams/diagram.cpp: Improved speed while loading datasets
	under Win32 by a strtod() replacement.

	* qucs.cpp (slotChangePage): Fixed small bug on Win32
	platforms.

2006-02-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new components: switch, relais, AM- and PM-modulator